<resources>
    <string name="app_name">Taj Hotel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="top_picks_for_you">Top Picks For You</string>
    <string name="customer_reviews">Customer Reviews</string>

    <string-array name="Quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>more</item>
    </string-array>

    <string name="title_activity_bottom_nav_bar">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">Welcome To Taj</string>
    <string name="logintxt">Login Up to your account</string>
    <string name="signuptxt">Create New Account</string>

    <string name="uname">Email</string>
    <string name="passwd">Password</string>
    <string name="login">Log In</string>
    <string name="signbtn"><u>Sign Up Now</u></string>
    <string name="loginbtn"><u>Log In Now</u></string>

    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="country">Code</string>
    <string name="cpwd">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_here"><u>Click Here!</u></string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="title_activity_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>