<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fillViewport="true"
    tools:context=".Fragments.LoginWithEmailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/welcome_font"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/usrname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/uname"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/unametxt"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:backgroundTint="@color/yellow"
            android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="2dp"
            android:textColor="@color/yellow"
            android:drawableTint="@color/white"
            android:hint="@string/email"
            android:inputType="text"
            android:textColorHint="@color/etxttint"
            android:textCursorDrawable="@drawable/cursor_color" />

        <TextView
            android:id="@+id/passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/passwd"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/passwdtxt"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:backgroundTint="@color/yellow"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="4dp"
            android:drawableTint="@color/white"
            android:textColor="@color/yellow"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColorHint="@color/etxttint"
            android:textCursorDrawable="@drawable/cursor_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Forget password?"
            android:textColor="@color/pink"
            android:textFontWeight="300"
            android:textSize="15sp" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/pink"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/signupbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/signbtn"
                android:textColor="@color/pink"
                android:textFontWeight="300"
                android:textSize="15sp" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>